archive/monitoring-logging/grafana-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus-grafana
  namespace: monitoring
  annotations:
    certmanager.k8s.io/acme-challenge-type: http01
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"

spec:
  tls:
  - hosts:
    - monitoring.trurep.production.emulya.com
    secretName: monitoring-tls
  rules:
  - host: monitoring.trurep.production.emulya.com
    http:
      paths:
      - path: /
        backend:
          serviceName: prometheus-operator-grafana
          servicePort: 80
